2005-11-15 12:19 Riccardo Mottola <rmottola@users.sf.net>
	* loadave.c: changed import to include, since it is a pure C file

2005-08-01 06:53 Gregory John Casamento <greg_casamento@yahoo.com>
                 changes from tarzeau/Gurkan Sengun.
	
	* English.lproj/TimeMon.gorm: Corrected copyright text.

2005-07-08 23:39 Gregory John Casamento <greg_casamento@yahoo.com>

	* English.lproj/TimeMon.nib: Updated to OSX nib.
	* Percentages.m: Changes to work under OSX
	* TimeMonWraps.h: ditto
	* TimeMonWraps.m: dittp

2005-01-31 11:33  Alexander Malmberg  <alexander@malmberg.org>

	* loadave.h: Document.

2005-01-31 11:06  Alexander Malmberg  <alexander@malmberg.org>

	* Percentages.h, Percentages.m, TimeMonWraps.m: Add an io-wait arc.
	* loadave.c, loadave.h: Add an io-wait cpu-state.
	* TimeMonWraps.h (drawInit, PSWait, setColor, _doDrawArc1)
	(_doDrawArc2, drawArc1): Remove.

2005-01-29 17:02 Gregory John Casamento <greg_casamento@yahoo.com>
                 README.rtf from tarzeau.
	* English.lproj/TimeMon.gorm: Correction to make text view resize
	correctly.
	* README.rtf: Updated with corrected spelling and some additional
	info.  
	* TimeMonWraps.h: Removed uneeded prototypes.

2005-01-29 13:42 Gregory John Casamento <greg_casamento@yahoo.com>

	* NSColorExtensions.m
	* Percentages.m
	* TimeMonColors.m
	* TimeMon_main.m: reformatted to GNU style.

2005-01-29 07:14 Gregory John Casamento <greg_casamento@yahoo.com>

	* Percentages.m
	* TimeMonColors.m: Code cleanup to make things fit the
	GNU style a little better.

2005-01-28 23:22 Gregory John Casamento <greg_casamento@yahoo.com>

	* Percentages.m: In [Percentages update] release the representation
	which is created to avoid a memory leak.

2005-01-28 22:50 Gregory John Casamento <greg_casamento@yahoo.com>

	* English.lproj/TimeMon.gorm: Corrected resize problem.
	* GNUmakefile: Added new classes
	* NSColorExtensions.[hm]: Category which allows the persistence