@@ -1,9 +1,4 @@
 // translated from the pswraps for GNUstep/MOSX by Gregory John Casamento
-
-#ifdef GNUSTEP
-#include <AppKit/PSOperators.h>
-#endif
-
 // the drawing function...
 void drawArc2(double radius, double bdeg, double ddeg, double ldeg, double mdeg);
 
